--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -225,6 +225,7 @@ md-menu-item {
             margin: 0 auto;
 
             h1 {
+                color: @textColorWhite;
                 font-size: 20px;
                 margin: 0;
                 line-height: normal;
@@ -241,6 +242,10 @@ md-menu-item {
 
         .flag-form {
             max-width: 430px;
+
+            .title {
+                color: @textColorWhite;
+            }
         }
 
         .rename-form {
@@ -250,6 +255,10 @@ md-menu-item {
 
             md-input-container {
                 margin-bottom: 0;
+            }
+
+            input {
+                color: @textColorWhite;
             }
         }
 
