--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
@@ -50,7 +50,7 @@
     }
 
     .dots-3 {
-        fill: @backgroundColorWhite;
+        fill: @textColorLightGrey;
     }
     /*.department {
         border-radius: 0;
@@ -185,8 +185,7 @@
             width: 100%;
 
             > div {
-                border-width: 1px;
-                border-style: solid;
+                border: 1px solid @textColorGrey;
                 padding: 20px;
                 border-radius: 4px;
                 margin-bottom: 10px;
