--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/profile.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/profile.less
@@ -30,7 +30,7 @@
     line-height: 117px !important; //override the image template issue
     max-width: 125px;
     max-height: 125px;
-        border: 4px solid @backgroundColor;
+    border: 4px solid @backgroundColor;
 }
 
 .profile-usertitle {
@@ -40,14 +40,14 @@
 }
 
 .profile-usertitle-name {
-        color: @textColorWhite;
+    color: @textColorWhite;
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 0;
 }
 
 .profile-usertitle-job {
-        color: @textColorWhite;
+    color: @textColorGrey;
     margin-bottom: 7px;
     font-size: 15px;
 }
