--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/search.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/search.less
@@ -104,11 +104,16 @@
             margin: 0 auto;
 
             h2 {
+                color: #F76446;
                 font-size: 32px;
                 font-weight: bold;
                 margin-bottom: 30px;
             }
 
+
+            .text{
+                color: @textColorLightGrey;
+            }
             div {
                 font-size: 20px;
                 white-space: pre-wrap;
