--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -16,7 +16,7 @@
         margin-bottom: 7px;
         margin-top: 2px;
         font-size: 15px;
-        color: @textColorWhite;
+        color: @textColorGrey;
     }
 
     .profile-userpic {
@@ -60,6 +60,7 @@
         text-align: center;
         margin-top: 7px;
         background: @backgroundColorSpitballBlue;
+        color: @textColorBlack;
     }
 
     h5 {
