--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_FeedAddComment.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_FeedAddComment.cshtml
@@ -19,7 +19,7 @@
             </ul>
         </div>
     </div>
-    <div class="actions borderTC2" layout="row" layout-align="space-between center">
+    <div class="actions" layout="row" layout-align="space-between center">
         <div user-not-register-popup="click" class="upload-options feed-upload" layout="row" layout-wrap layout-align="space-between start">
             <a plupload="f.add.fileUpload.url" ng-click="f.add.upload()"
                plupload-options="f.add.fileUpload.options" plupload-callbacks="f.add.fileUpload.callbacks"
