--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/Choose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/Choose.cshtml
@@ -30,7 +30,7 @@
                 </ul>
             </div>
         </div>
-        <div ng-if="lc.term.length && lc.universities.length" class="add-uni-btn textTC2">
+        <div ng-if="lc.term.length && lc.universities.length" class="add-uni-btn">
             <div>@UniversityResources.NoMoreSchools</div>
             <md-button class="btn button-Blue btn-primary text-capitalize" ng-click="lc.createUniversity = true" ga-track-event="['universityChoose', 'add new university']">@UniversityResources.AddSchool</md-button>
         </div>
