--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/_EmptyStateTopTree.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/_EmptyStateTopTree.cshtml
@@ -4,7 +4,7 @@
     <h2>@UniversityResources.EmptyStateTopNodeTitle</h2>
     <div>@UniversityResources.EmptyStateTopNodeText</div>
     <form ng-submit="l.createFirstBox(createFirstBox)" class="text-capitalize" novalidate name="createFirstBox">
-        <div class="borderTC13" layout="row" layout-wrap>
+        <div layout="row" layout-wrap>
             <md-input-container flex="100">
                 <label>@UniversityResources.EnterClassName</label>
                 <input autofocus autocomplete="off" name="name" required ng-model="l.boxName"
