--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
@@ -22,8 +22,6 @@ body.theme-light {
   /*#endregion*/
   /*#region accountSettings.less*/
   /*#endregion*/
-  /*#region box.less*/
-  /*#endregion*/
   /*#endregion*/
   /*#region box.less*/
   /*#endregion*/
@@ -79,19 +77,6 @@ body.theme-light {
 }
 .theme-light .add {
   background: #db4437;
-}
-.theme-light .dd-list md-content {
-  background: #ffffff;
-  color: #212325;
-}
-.theme-light .dd-list md-option {
-  border-bottom: 1px solid #282828;
-}
-.theme-light .dd-list md-option[selected] {
-  color: #2698D4;
-}
-.theme-light .dd-list md-option[selected]:focus {
-  color: #2698D4;
 }
 .theme-light md-select:not([disabled]):focus .md-select-value {
   color: #212325;
@@ -235,12 +220,6 @@ body.theme-light {
 .theme-light .md-user-menu:before {
   border-bottom: 8px solid #ffffff;
 }
-.theme-light .md-user-menu .user-menu-item svg {
-  fill: #212325;
-}
-.theme-light .md-user-menu .user-menu-item .md-button span {
-  color: #212325;
-}
 .theme-light .nav-bar {
   background: #323538;
   border-bottom: 5px solid #dadada;
@@ -271,9 +250,6 @@ body.theme-light {
   color: #888b8e;
 }
 .theme-light .change-email-dialog svg {
-  fill: #ffffff;
-}
-.theme-light .folder-selected .arrow {
   fill: #ffffff;
 }
 .theme-light .mdno-touchevents .feed .actions .anonymous-wrapper .anonymous:hover {
@@ -506,6 +482,41 @@ body .box-template .status-number {
 }
 body .box-template .number {
   text-transform: capitalize;
+}
+body .box-template .number,
+body .box-template .status {
+  color: #212325;
+}
+body .item-template .base,
+body .quiz-template .base {
+  padding: 5px;
+  border: 1px solid #888b8e;
+}
+body .item-template .extra h2 {
+  color: #ffffff;
+}
+body .quiz-template .first-letter {
+  color: #ffffff;
+  border: 1px solid #ffffff;
+}
+body .quiz-template .bottom {
+  background: #ffffff;
+}
+body .quiz-template .bottom .name {
+  color: #212325;
+}
+body .dd-list md-content {
+  background: #ffffff;
+  color: #212325;
+}
+body .dd-list md-option {
+  border-bottom: 1px solid #282828;
+}
+body .dd-list md-option[selected] {
+  color: #2698D4;
+}
+body .dd-list md-option[selected]:focus {
+  color: #2698D4;
 }
 .page-body {
   margin-left: 95px;
