--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.css
@@ -22,8 +22,6 @@ body.theme-light {
   /*#endregion*/
   /*#region accountSettings.less*/
   /*#endregion*/
-  /*#region box.less*/
-  /*#endregion*/
   /*#endregion*/
   /*#region box.less*/
   /*#endregion*/
@@ -79,19 +77,6 @@ body.theme-light {
 }
 .theme-light .add {
   background: #db4437;
-}
-.theme-light .dd-list md-content {
-  background: #ffffff;
-  color: #212325;
-}
-.theme-light .dd-list md-option {
-  border-bottom: 1px solid #282828;
-}
-.theme-light .dd-list md-option[selected] {
-  color: #2698D4;
-}
-.theme-light .dd-list md-option[selected]:focus {
-  color: #2698D4;
 }
 .theme-light md-select:not([disabled]):focus .md-select-value {
   color: #212325;
@@ -235,12 +220,6 @@ body.theme-light {
 .theme-light .md-user-menu:before {
   border-bottom: 8px solid #ffffff;
 }
-.theme-light .md-user-menu .user-menu-item svg {
-  fill: #212325;
-}
-.theme-light .md-user-menu .user-menu-item .md-button span {
-  color: #212325;
-}
 .theme-light .nav-bar {
   background: #323538;
   border-bottom: 5px solid #dadada;
@@ -271,9 +250,6 @@ body.theme-light {
   color: #888b8e;
 }
 .theme-light .change-email-dialog svg {
-  fill: #ffffff;
-}
-.theme-light .folder-selected .arrow {
   fill: #ffffff;
 }
 .theme-light .mdno-touchevents .feed .actions .anonymous-wrapper .anonymous:hover {
@@ -471,7 +447,7 @@ body.theme-light {
   position: relative;
   margin-top: 10px;
   margin-bottom: 10px;
-  background: #ffffff;
+  background: #4190b9;
   /*.nav-tabs {
         list-style: none;
         margin-top: 15px;
@@ -537,8 +513,11 @@ body.theme-light {
   max-width: 900px;
   background: none;
 }
+.invite.invite-dialog .caption {
+  color: #323538;
+}
 .invite.invite-dialog .content {
-  border: 1px solid;
+  border: 1px solid #4190b9;
   border-radius: 5px;
 }
 .invite.invite-dialog .content .tabs {
