--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.rtl.css
@@ -22,8 +22,6 @@ body.theme-light {
   /*#endregion*/
   /*#region accountSettings.less*/
   /*#endregion*/
-  /*#region box.less*/
-  /*#endregion*/
   /*#endregion*/
   /*#region box.less*/
   /*#endregion*/
@@ -79,19 +77,6 @@ body.theme-light {
 }
 .theme-light .add {
   background: #db4437;
-}
-.theme-light .dd-list md-content {
-  background: #ffffff;
-  color: #212325;
-}
-.theme-light .dd-list md-option {
-  border-bottom: 1px solid #282828;
-}
-.theme-light .dd-list md-option[selected] {
-  color: #2698D4;
-}
-.theme-light .dd-list md-option[selected]:focus {
-  color: #2698D4;
 }
 .theme-light md-select:not([disabled]):focus .md-select-value {
   color: #212325;
@@ -235,12 +220,6 @@ body.theme-light {
 .theme-light .md-user-menu:before {
   border-bottom: 8px solid #ffffff;
 }
-.theme-light .md-user-menu .user-menu-item svg {
-  fill: #212325;
-}
-.theme-light .md-user-menu .user-menu-item .md-button span {
-  color: #212325;
-}
 .theme-light .nav-bar {
   background: #323538;
   border-bottom: 5px solid #dadada;
@@ -271,9 +250,6 @@ body.theme-light {
   color: #888b8e;
 }
 .theme-light .change-email-dialog svg {
-  fill: #ffffff;
-}
-.theme-light .folder-selected .arrow {
   fill: #ffffff;
 }
 .theme-light .mdno-touchevents .feed .actions .anonymous-wrapper .anonymous:hover {
@@ -477,7 +453,7 @@ body.theme-light {
 }
 .folder-selected .folder-name .folder-name-inner,
 .folders .folder-name .folder-name-inner {
-  background: #ffffff;
+  background: #8c99a6;
   padding: 0 6px;
   width: 100%;
 }
@@ -524,6 +500,9 @@ body.theme-light {
   margin-left: 8px;
   margin-right: 8px;
 }
+.folder-selected .text {
+  color: #ffffff;
+}
 .folder-selected .md-menu {
   padding: 0;
 }
@@ -533,7 +512,7 @@ body.theme-light {
 }
 .folder-selected .dots-3 {
   margin-right: 0;
-  fill: #dadada;
+  fill: #c3c3c3;
 }
 .folder-selected .arrow {
   width: 25px;
@@ -543,7 +522,7 @@ body.theme-light {
   -o-transform: rotate(0);
   -webkit-transform: rotate(0);
   transform: rotate(0);
-  fill: #212325;
+  fill: #888b8e;
   opacity: .8;
   margin-left: 15px;
 }
@@ -642,6 +621,7 @@ library-list {
   border: 1px solid #888b8e;
   padding: 6px;
   background: none;
+  color: #888b8e;
 }
 .folders .add-folder .content svg {
   fill: #888b8e;
@@ -1069,9 +1049,6 @@ library-list {
 .quiz .top.draft-wpr {
   border: 1px solid #fff;
 }
-.quiz .top .first-letter {
-  border: 1px solid #212325;
-}
 .quiz .bottom {
   position: relative;
   height: calc(100% - 45%);
@@ -1086,7 +1063,6 @@ library-list {
   font-size: 14px;
   line-height: 16px;
   width: 100%;
-  color: #ffffff;
 }
 .quiz .stats {
   padding-top: 5px;
@@ -1276,6 +1252,9 @@ library-list {
 .upload .uploadSection md-icon {
   width: 50px;
   height: 50px;
+}
+.upload .uploadSection .file {
+  fill: #2698D4;
 }
 .upload .uploadSection .link {
   fill: #64D0FF;
