--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.rtl.css
@@ -22,8 +22,6 @@ body.theme-light {
   /*#endregion*/
   /*#region accountSettings.less*/
   /*#endregion*/
-  /*#region box.less*/
-  /*#endregion*/
   /*#endregion*/
   /*#region box.less*/
   /*#endregion*/
@@ -79,19 +77,6 @@ body.theme-light {
 }
 .theme-light .add {
   background: #db4437;
-}
-.theme-light .dd-list md-content {
-  background: #ffffff;
-  color: #212325;
-}
-.theme-light .dd-list md-option {
-  border-bottom: 1px solid #282828;
-}
-.theme-light .dd-list md-option[selected] {
-  color: #2698D4;
-}
-.theme-light .dd-list md-option[selected]:focus {
-  color: #2698D4;
 }
 .theme-light md-select:not([disabled]):focus .md-select-value {
   color: #212325;
@@ -235,12 +220,6 @@ body.theme-light {
 .theme-light .md-user-menu:before {
   border-bottom: 8px solid #ffffff;
 }
-.theme-light .md-user-menu .user-menu-item svg {
-  fill: #212325;
-}
-.theme-light .md-user-menu .user-menu-item .md-button span {
-  color: #212325;
-}
 .theme-light .nav-bar {
   background: #323538;
   border-bottom: 5px solid #dadada;
@@ -271,9 +250,6 @@ body.theme-light {
   color: #888b8e;
 }
 .theme-light .change-email-dialog svg {
-  fill: #ffffff;
-}
-.theme-light .folder-selected .arrow {
   fill: #ffffff;
 }
 .theme-light .mdno-touchevents .feed .actions .anonymous-wrapper .anonymous:hover {
@@ -948,6 +924,7 @@ body.theme-light {
 .feed .comment .delete md-icon {
   width: 17px;
   height: 17px;
+  fill: #c3c3c3;
 }
 .feed .reply {
   position: relative;
@@ -1224,6 +1201,7 @@ body.theme-light {
 .like-dialog md-toolbar {
   min-height: 0;
   padding: 20px 25px;
+  background: #4190b9;
 }
 .like-dialog md-toolbar h2 {
   margin: 0;
@@ -1241,6 +1219,10 @@ body.theme-light {
 .like-dialog md-toolbar button md-icon {
   width: 15px;
   height: 15px;
+  fill: #ffffff;
+}
+.like-dialog md-dialog-content {
+  background: #ffffff;
 }
 .like-dialog md-dialog-content ul {
   margin-bottom: 0;
@@ -1251,7 +1233,7 @@ body.theme-light {
   margin: 0 25px;
 }
 .like-dialog md-dialog-content ul li:not(:nth-last-child(1)) {
-  border-bottom: 1px solid;
+  border-bottom: 1px solid #c3c3c3;
 }
 .like-dialog md-dialog-content ul li a {
   align-items: center;
