--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.css
@@ -22,8 +22,6 @@ body.theme-light {
   /*#endregion*/
   /*#region accountSettings.less*/
   /*#endregion*/
-  /*#region box.less*/
-  /*#endregion*/
   /*#endregion*/
   /*#region box.less*/
   /*#endregion*/
@@ -79,19 +77,6 @@ body.theme-light {
 }
 .theme-light .add {
   background: #db4437;
-}
-.theme-light .dd-list md-content {
-  background: #ffffff;
-  color: #212325;
-}
-.theme-light .dd-list md-option {
-  border-bottom: 1px solid #282828;
-}
-.theme-light .dd-list md-option[selected] {
-  color: #2698D4;
-}
-.theme-light .dd-list md-option[selected]:focus {
-  color: #2698D4;
 }
 .theme-light md-select:not([disabled]):focus .md-select-value {
   color: #212325;
@@ -235,12 +220,6 @@ body.theme-light {
 .theme-light .md-user-menu:before {
   border-bottom: 8px solid #ffffff;
 }
-.theme-light .md-user-menu .user-menu-item svg {
-  fill: #212325;
-}
-.theme-light .md-user-menu .user-menu-item .md-button span {
-  color: #212325;
-}
 .theme-light .nav-bar {
   background: #323538;
   border-bottom: 5px solid #dadada;
@@ -271,9 +250,6 @@ body.theme-light {
   color: #888b8e;
 }
 .theme-light .change-email-dialog svg {
-  fill: #ffffff;
-}
-.theme-light .folder-selected .arrow {
   fill: #ffffff;
 }
 .theme-light .mdno-touchevents .feed .actions .anonymous-wrapper .anonymous:hover {
@@ -655,6 +631,7 @@ md-menu-item.blue svg {
   margin: 0 auto;
 }
 .itemPage .fileName .name-info h1 {
+  color: #212325;
   font-size: 20px;
   margin: 0;
   line-height: normal;
@@ -670,6 +647,9 @@ md-menu-item.blue svg {
 .itemPage .fileName .flag-form {
   max-width: 430px;
 }
+.itemPage .fileName .flag-form .title {
+  color: #212325;
+}
 .itemPage .fileName .rename-form {
   max-width: 746px;
   width: 100%;
@@ -677,6 +657,9 @@ md-menu-item.blue svg {
 }
 .itemPage .fileName .rename-form md-input-container {
   margin-bottom: 0;
+}
+.itemPage .fileName .rename-form input {
+  color: #212325;
 }
 .itemPage .fileName form {
   margin: 0 auto;
