--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.css
@@ -23,8 +23,6 @@ body.theme-light {
   /*#endregion*/
   /*#region accountSettings.less*/
   /*#endregion*/
-  /*#region box.less*/
-  /*#endregion*/
   /*#endregion*/
   /*#region box.less*/
   /*#endregion*/
@@ -80,19 +78,6 @@ body.theme-light {
 }
 .theme-light .add {
   background: #db4437;
-}
-.theme-light .dd-list md-content {
-  background: #ffffff;
-  color: #212325;
-}
-.theme-light .dd-list md-option {
-  border-bottom: 1px solid #282828;
-}
-.theme-light .dd-list md-option[selected] {
-  color: #2698D4;
-}
-.theme-light .dd-list md-option[selected]:focus {
-  color: #2698D4;
 }
 .theme-light md-select:not([disabled]):focus .md-select-value {
   color: #212325;
@@ -236,12 +221,6 @@ body.theme-light {
 .theme-light .md-user-menu:before {
   border-bottom: 8px solid #ffffff;
 }
-.theme-light .md-user-menu .user-menu-item svg {
-  fill: #212325;
-}
-.theme-light .md-user-menu .user-menu-item .md-button span {
-  color: #212325;
-}
 .theme-light .nav-bar {
   background: #323538;
   border-bottom: 5px solid #dadada;
@@ -272,9 +251,6 @@ body.theme-light {
   color: #888b8e;
 }
 .theme-light .change-email-dialog svg {
-  fill: #ffffff;
-}
-.theme-light .folder-selected .arrow {
   fill: #ffffff;
 }
 .theme-light .mdno-touchevents .feed .actions .anonymous-wrapper .anonymous:hover {
@@ -533,7 +509,7 @@ body.theme-light {
   color: #212325;
 }
 .library .dots-3 {
-  fill: #212325;
+  fill: #c3c3c3;
 }
 .library .back-arrow svg {
   fill: #212325;
@@ -618,8 +594,7 @@ body.theme-light {
   width: 100%;
 }
 .library .empty-top form > div {
-  border-width: 1px;
-  border-style: solid;
+  border: 1px solid #888b8e;
   padding: 20px;
   border-radius: 4px;
   margin-bottom: 10px;
