--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
@@ -22,6 +22,7 @@
             font-size: 20px;
             margin-bottom: 10px;
             margin-top: 5px;
+            color: @textColorWhite;
         }
 
         .close {
