--- a/Zbang.Cloudents.Mvc4WebRole/Views/Chat/PreviewDialog.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Chat/PreviewDialog.cshtml
@@ -5,12 +5,10 @@
         <div class="md-toolbar-tools">
             @*<h2 class="ellipsis"></h2>*@
             <md-button aria-label="close" class="close-btn" ng-click="lc.close()">
-                <md-icon md-svg-icon="t:close" class="svgTC4"></md-icon>
-                @*@Html.Svg("~/images/site/icons.svg", "close", new {@class = "svgTC4"})*@
+                <md-icon md-svg-icon="t:close"></md-icon>
             </md-button>
             <md-button aria-label="download" download target="_blank" class="download-btn" ng-href="{{::lc.downloadLink}}" title="@ItemsResources.Download">
-                <md-icon md-svg-icon="i:download" class="svgTC4"></md-icon>
-                @*@Html.Svg("~/images/site/itemicons.svg", "download", new {@class = "svgTC4"})*@
+                <md-icon md-svg-icon="i:download"></md-icon>
             </md-button>
         </div>
     </md-toolbar>
