--- a/Zbang.Cloudents.Mvc4WebRole/Views/Item/UploadDialog.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Item/UploadDialog.cshtml
@@ -4,7 +4,7 @@
     //const string url = "~/images/site/uploadIcons.svg";
 }
 <a id="upload"></a>
-<div class="portlet invite box upload backgroundTC19">
+<div class="portlet invite box upload">
     <div class="portlet-title">
         <div class="caption">
             @IndexResources.UploadFiles
@@ -19,8 +19,7 @@
                         <div flex-xs="100" flex-sm="50" flex-md="25" flex-gt-md="25" ng-click="u.uploadStep = 1">
                             <button type="button">
                                 <span>
-                                    <md-icon md-svg-icon="u:file" class="svgTC42"></md-icon>
-                                    @*@Html.Svg(url, "file", new {@class = "svgTC42"})*@
+                                    <md-icon md-svg-icon="u:file" class="file"></md-icon>
                                 </span>
                                 @IndexResources.UploadFromComputer
                             </button>
@@ -29,7 +28,6 @@
                             <button type="button" ng-click="u.google()" ng-disabled="!u.googleDriveLoaded">
                                 <span>
                                     <md-icon md-svg-icon="u:googleDrive"></md-icon>
-                                    @*@Html.Svg(url, "googleDrive")*@
                                 </span>
 
                                 @IndexResources.UploadFromGoogle
@@ -39,7 +37,6 @@
                             <button type="button" ng-click="u.dropBox()" ng-disabled="!u.dropBoxLoaded">
                                 <span>
                                     <md-icon md-svg-icon="u:dropbox" class="dropbox"></md-icon>
-                                    @*@Html.Svg(url, "dropbox", new {@class = "dropbox"})*@
                                 </span>
                                 @IndexResources.UploadFromDropbox
                             </button>
@@ -48,7 +45,6 @@
                             <button type="button">
                                 <span>
                                     <md-icon md-svg-icon="u:link" class="link"></md-icon>
-                                    @*@Html.Svg(url, "link", new {@class = "link"})*@
                                 </span>
                                 @IndexResources.WebLink
                             </button>
